# -

./: .gitignore  CMakeLists.txt  ImageProcessor.cpp  ImageProcessor.h  Main.qml  Main.qml.autosave  main.cpp  mapimageprovider.cpp  mapimageprovider.h  resource.qrc  tcpclient.cpp  tcpclient.h
